# accentcolordetect

./: .gitignore  CHANGELOG.md  README.md  TODO.md  setup.cfg  setup.py  test.py
accentcolordetect/: __init__.py  _darwin_detect.py  _dummy.py  _windows_detect.py
accentcolordetect.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: example.py
